Final changes.